Penambahan detail isi anggota keluarga

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 Changelog v.2.0 :
 
 -   Penyesuaian Sistem
+-   Penambahan fitur Keluarga
 -   Penambahan fitur Penduduk
 -   Penambahan fitur Kategori
