Penambahan fitur artikel

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,3 +4,4 @@ Changelog v.2.0 :
 -   Penambahan fitur Keluarga
 -   Penambahan fitur Penduduk
 -   Penambahan fitur Kategori
+-   Penambahan fitur Artikel
