Bugfix select klasifikasi surat masuk

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,3 +6,4 @@ Changelog v.2.0 :
 -   Penambahan fitur cetak biodata PDF
 -   Penambahan fitur Kategori
 -   Penambahan fitur Artikel
+-   Penambahan fitur Surat Masuk
