Bugfix select klasifikasi surat keluar

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,3 +7,5 @@ Changelog v.2.0 :
 -   Penambahan fitur Kategori
 -   Penambahan fitur Artikel
 -   Penambahan fitur Surat Masuk
+-   Penambahan fitur Surat Keluar
+-   Penambahan fitur Pemerintahan
