Penambahan fitur Profil Desa

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,3 +9,4 @@ Changelog v.2.0 :
 -   Penambahan fitur Surat Masuk
 -   Penambahan fitur Surat Keluar
 -   Penambahan fitur Pemerintahan
+-   Penambahan fitur Profil Desa
